--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <div class="card" style="width: 18rem;">
         <img src="./pics.bootstrap/maksym-tymchyk-pw2bTpu6juA-unsplash.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">imagen 5</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repellat vero et dicta corporis, dolores excepturi voluptate fuga hic odio deleniti asperiores corrupti, eaque necessitatibus ducimus incidunt modi non explicabo?</p>
+            <h5 class="card-title">Vendo auto con pequeñas fisuras</h5>
+            <p class="card-text">Auto deportivo con respiradores artesanales. El unico incoveniente que tiene es el cambio de vidrio. El felino se vende por separado. </p>
             <a href="https://www.mercadolibre.com.ar/" class="btn btn-primary">Mercado Libre</a>
         </div>
   </div>
@@ -73,7 +73,7 @@
       </h2>
       <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <strong>Master en preparacion de jugo en sobrecito </strong> Clases orientadas a usuarios que quieran mejorar en la preparacion de jugo en sobrecitos. El master consta de 30 clases de 2hs cada una, intercalada con teoria y la fisica de revolver los liquidos y sus beneficios al sabor del producto final.
         </div>
       </div>
     </div>
@@ -85,7 +85,7 @@
       </h2>
       <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <strong>Estetica</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
         </div>
       </div>
     </div>
